PostGIS 3.4.5dev
xxxx/xx/xx

PostgreSQL 12-17 required. GEOS 3.6+ required but GEOS 3.12+ to take advantage of all features.
Proj 6.1+ required.

* Bug Fixes *

  - #5978, fix parsing of constraints in geometry_columns (Paul Ramsey)
  - #5977, Fix downgrade protection with standard conforming strings off (Sandro Santilli)
  - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
  - #5951, [topology] Fix crash in ST_GetFaceEdges with corrupted topology (Sandro Santilli)
  - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)
  - #5936, [topology] Do script-based upgrade in a single transaction (Sandro Santilli)
  - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
  - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
  - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
  - Do not complain about illegal option when calling shp2pgsql -?
  - #5564, BRIN crash fix and support for parallel in PG17+
          (Paul Ramsey, Regina Obe)
  - #5876, Fix ST_AddPoint with empty point argument
  - #5874, Line substring returns wrong answer (Paul Ramsey)
  - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
  - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
  - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
  - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
  - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
  - #5905, Crash on deeply nested geometries (Paul Ramsey)
  - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
  - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
  - Support build under Pg19 (Paul Ramsey)
  - #5082, LRS proportions clamped to [0,1] (Pawel Ostrowski)
  - #5985, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)
  - #5991, CircularString distance error (Paul Ramsey)